プロジェクト初期設定完了

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
-# Mono auto generated files
-mono_crash.*
+# Mono auto generated filesmono_crash.*
 
 # Build results
 [Dd]ebug/
@@ -23,15 +22,19 @@ mono_crash.*
 [Rr]eleases/
 x64/
 x86/
-[Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
-[Oo]bj/
-[Oo]ut/
+#[Oo]bj/
 [Ll]og/
 [Ll]ogs/
+!/Externals/DirectXMesh/lib/Debug/
+!/Externals/DirectXMesh/lib/Release/
+!/Externals/DirectXTex/lib/Debug/
+!/Externals/DirectXTex/lib/Release/
+!/Externals/assimp/lib/Debug/
+!/Externals/assimp/lib/Release/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -63,20 +66,22 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
-# ASP.NET Scaffolding
-ScaffoldingReadMe.txt
-
 # StyleCop
 StyleCopReport.xml
 
 # Files built by Visual Studio
+*.ini
 *_i.c
 *_p.c
 *_h.h
 *.ilk
 *.meta
-*.obj
-*.iobj
+[Dd]bug/.obj
+[Dd]ebug/.obj
+[Dd]ebugPublic/.obj
+[Rr]elease/.obj
+[Rr]eleases/.obj
+# *.iobj
 *.pch
 *.pdb
 *.ipdb
@@ -143,9 +148,7 @@ _TeamCity*
 !.axoCover/settings.json
 
 # Coverlet is a free, cross platform Code Coverage Tool
-coverage*.json
-coverage*.xml
-coverage*.info
+coverage*[.json, .xml, .info]
 
 # Visual Studio code coverage results
 *.coverage
@@ -358,6 +361,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+DirectXGame/DirectXGame.exe
+DirectXGame/imgui.ini
 
-# Fody - auto-generated XML schema
-FodyWeavers.xsd
+# DirectXTex Compiled Shaders
+**/DirectXTex/Shaders/Compiled/
