--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,11 +150,80 @@
   <ItemGroup>
     <ClCompile Include="class\scene\TestScene.cpp" />
     <ClCompile Include="class\scene\Title.cpp" />
+    <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\Actor\Actor.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\Actor\ActorHealth.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\Actor\ActorManager.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\Actor\BlackBoard.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\Actor\Enemy\Attacker.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\BehaviorTreeUtility.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\BehaviourTreeBulider.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\BranchNode\BranchNodeBase.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\BranchNode\CheckFarPlayer.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\BranchNode\CheckNearPlayer.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\CompositeNode\CompositeNodeBase.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\CompositeNode\Selector.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\CompositeNode\Sequence.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\DecoratorNode\DecoratorNodeBase.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\DecoratorNode\Inverter.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\LeafNode\ChasePlayerLeaf.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\LeafNode\CircleAttackLeaf.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\LeafNode\DebugDrawLeaf.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\LeafNode\WaitLeaf.cpp" />
+    <ClCompile Include="FL1\GameObjects\BehaviourTree\Math\MyTimer.cpp" />
+    <ClCompile Include="FL1\GameObjects\Player\Player.cpp" />
+    <ClCompile Include="FL1\GameObjects\Skydome\Skydome.cpp" />
+    <ClCompile Include="FL1\GameObjects\World\Field.cpp" />
+    <ClCompile Include="FL1\GameObjects\World\World.cpp" />
+    <ClCompile Include="FL1\scene\GameScene.cpp" />
+    <ClCompile Include="FL1\scene\Title.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\scene\TestScene.h" />
     <ClInclude Include="class\scene\Title.h" />
+    <ClInclude Include="DirectXGame\Externals\imnodes\imnodes.h" />
+    <ClInclude Include="DirectXGame\Externals\imnodes\imnodes_internal.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Actor\Actor.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Actor\ActorHealth.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Actor\ActorManager.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Actor\BlackBoard.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Actor\Enemy\Attacker.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Actor\IAgent.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\BehaviorTreeUtility.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\BehaviourTreeBulider.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\BranchNode\BranchNodeBase.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\BranchNode\CheckFarPlayer.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\BranchNode\CheckNearPlayer.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\CompositeNode\CompositeNodeBase.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\CompositeNode\Selector.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\CompositeNode\Sequence.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\DecoratorNode\DecoratorNodeBase.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\DecoratorNode\Inverter.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\INode.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\AlwaysFailLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\AlwaysSuccessLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\ChasePlayerLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\CircleAttackLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\DebugDrawLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\LeafNodeBase.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\LeafNode\WaitLeaf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Math\Mathf.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Math\MySystemTimer.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Math\MyTimer.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Math\Screen.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\Math\Singleton.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\NodeBase.h" />
+    <ClInclude Include="FL1\GameObjects\BehaviourTree\NodeResult.h" />
+    <ClInclude Include="FL1\GameObjects\Player\Player.h" />
+    <ClInclude Include="FL1\GameObjects\Skydome\Skydome.h" />
+    <ClInclude Include="FL1\GameObjects\World\Field.h" />
+    <ClInclude Include="FL1\GameObjects\World\IWorld.h" />
+    <ClInclude Include="FL1\GameObjects\World\World.h" />
+    <ClInclude Include="FL1\scene\GameScene.h" />
+    <ClInclude Include="FL1\scene\Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
