--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -148,6 +148,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\GameObjects\Enemy\State\ChaseState.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\State\AttackState.cpp" />
     <ClCompile Include="class\GameObjects\Bullets\BulletManager.cpp" />
     <ClCompile Include="class\GameObjects\Bullets\Bullet\Bullet.cpp" />
     <ClCompile Include="class\GameObjects\Bullets\BulletBase.cpp" />
@@ -163,35 +165,38 @@
     <ClCompile Include="class\scene\TestScene.cpp" />
     <ClCompile Include="class\scene\Title.cpp" />
     <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\Actor.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\ActorHealth.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\ActorManager.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\BlackBoard.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\Enemy\Attacker.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\BehaviorTreeUtility.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\BehaviourTreeBulider.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\BranchNode\BranchNodeBase.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\BranchNode\CheckFarPlayer.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\BranchNode\CheckNearPlayer.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\CompositeNode\CompositeNodeBase.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\CompositeNode\Selector.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\CompositeNode\Sequence.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\DecoratorNode\DecoratorNodeBase.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\DecoratorNode\Inverter.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\ChasePlayerLeaf.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\CircleAttackLeaf.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\DebugDrawLeaf.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\WaitLeaf.cpp" />
-    <ClCompile Include="class\GameObjects\BehaviourTree\Math\MyTimer.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\Actor.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\ActorHealth.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\ActorManager.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\BlackBoard.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\Melee\MeleeAttacker.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\BehaviorTreeUtility.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\BehaviourTreeBulider.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\BranchNodeBase.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\CheckFarPlayer.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\CheckNearPlayer.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\CompositeNodeBase.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\Selector.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\Sequence.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\DecoratorNode\DecoratorNodeBase.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\DecoratorNode\Inverter.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\ChasePlayerLeaf.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\CircleAttackLeaf.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\WaitLeaf.cpp" />
     <ClCompile Include="class\GameObjects\Player\Player.cpp" />
     <ClCompile Include="class\GameObjects\Skydome\Skydome.cpp" />
     <ClCompile Include="class\GameObjects\World\Field.cpp" />
     <ClCompile Include="class\GameObjects\World\World.cpp" />
     <ClCompile Include="class\GameObjects\Camera\FollowCamera\FollowCamera.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\State\EscapeState.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h" />
+    <ClInclude Include="class\GameObjects\Enemy\State\AttackState.h" />
     <ClInclude Include="class\GameObjects\Bullets\BulletManager.h" />
     <ClInclude Include="class\GameObjects\Bullets\Bullet\Bullet.h" />
     <ClInclude Include="class\GameObjects\Bullets\BulletBase.h" />
@@ -214,44 +219,40 @@
     <ClInclude Include="class\scene\Title.h" />
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes.h" />
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes_internal.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\Actor.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\ActorHealth.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\ActorManager.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\BlackBoard.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\Enemy\Attacker.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\IAgent.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\BehaviorTreeUtility.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\BehaviourTreeBulider.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\BranchNode\BranchNodeBase.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\BranchNode\CheckFarPlayer.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\BranchNode\CheckNearPlayer.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\CompositeNode\CompositeNodeBase.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\CompositeNode\Selector.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\CompositeNode\Sequence.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\DecoratorNode\DecoratorNodeBase.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\DecoratorNode\Inverter.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\INode.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\AlwaysFailLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\AlwaysSuccessLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\ChasePlayerLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\CircleAttackLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\DebugDrawLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\LeafNodeBase.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\WaitLeaf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\Mathf.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\MySystemTimer.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\MyTimer.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\Screen.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\Singleton.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\NodeBase.h" />
-    <ClInclude Include="class\GameObjects\BehaviourTree\NodeResult.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\Actor.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\ActorHealth.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\ActorManager.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\BlackBoard.h" />
+    <ClInclude Include="class\GameObjects\Enemy\Melee\MeleeAttacker.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\BehaviorTreeUtility.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\BehaviourTreeBulider.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\BranchNodeBase.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\CheckFarPlayer.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\CheckNearPlayer.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\CompositeNodeBase.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\Selector.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\Sequence.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\DecoratorNode\DecoratorNodeBase.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\DecoratorNode\Inverter.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\INode.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\AlwaysFailLeaf.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\AlwaysSuccessLeaf.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\ChasePlayerLeaf.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\CircleAttackLeaf.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\LeafNodeBase.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\WaitLeaf.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\NodeBase.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\NodeResult.h" />
     <ClInclude Include="class\GameObjects\Player\Player.h" />
     <ClInclude Include="class\GameObjects\Skydome\Skydome.h" />
     <ClInclude Include="class\GameObjects\World\Field.h" />
     <ClInclude Include="class\GameObjects\World\IWorld.h" />
     <ClInclude Include="class\GameObjects\World\World.h" />
     <ClInclude Include="class\GameObjects\Camera\FollowCamera\FollowCamera.h" />
+    <ClInclude Include="class\GameObjects\Enemy\State\StateBase.h" />
+    <ClInclude Include="class\GameObjects\Enemy\State\EscapeState.h" />
+    <ClInclude Include="class\GameObjects\Enemy\State\WaitState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
