--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -30,67 +30,61 @@
     <ClCompile Include="class\GameObjects\World\World.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\Enemy\Attacker.cpp">
+    <ClCompile Include="class\GameObjects\Enemy\Melee\MeleeAttacker.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\Actor.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\Actor.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\ActorHealth.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\ActorHealth.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\ActorManager.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\ActorManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\Actor\BlackBoard.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\BlackBoard.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\BranchNode\BranchNodeBase.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\BranchNodeBase.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\BranchNode\CheckFarPlayer.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\CheckFarPlayer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\BranchNode\CheckNearPlayer.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\CheckNearPlayer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\CompositeNode\CompositeNodeBase.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\CompositeNodeBase.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\CompositeNode\Selector.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\Selector.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\CompositeNode\Sequence.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\Sequence.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\DecoratorNode\DecoratorNodeBase.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\DecoratorNode\DecoratorNodeBase.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\DecoratorNode\Inverter.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\DecoratorNode\Inverter.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\ChasePlayerLeaf.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\ChasePlayerLeaf.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\CircleAttackLeaf.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\CircleAttackLeaf.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\DebugDrawLeaf.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\LeafNode\WaitLeaf.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\LeafNode\WaitLeaf.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\BehaviorTreeUtility.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\Math\MyTimer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\BehaviorTreeUtility.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="class\GameObjects\BehaviourTree\BehaviourTreeBulider.cpp">
+    <ClCompile Include="class\Componets\BehaviourTree\BehaviourTreeBulider.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="class\GameObjects\Player\Player.cpp">
@@ -141,6 +135,21 @@
     <ClCompile Include="class\GameObjects\Camera\FollowCamera\FollowCamera.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="class\GameObjects\Enemy\State\AttackState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="class\GameObjects\Enemy\State\ChaseState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="class\GameObjects\Enemy\State\EscapeState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\scene\TestScene.h">
@@ -158,100 +167,79 @@
     <ClInclude Include="class\GameObjects\World\World.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\Enemy\Attacker.h">
+    <ClInclude Include="class\GameObjects\Enemy\Melee\MeleeAttacker.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\Actor.h">
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\Actor.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\ActorHealth.h">
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\ActorHealth.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\ActorManager.h">
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\ActorManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\BlackBoard.h">
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\BlackBoard.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Actor\IAgent.h">
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\BranchNodeBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\BranchNode\BranchNodeBase.h">
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\CheckFarPlayer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\BranchNode\CheckFarPlayer.h">
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\CheckNearPlayer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\BranchNode\CheckNearPlayer.h">
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\CompositeNodeBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\CompositeNode\CompositeNodeBase.h">
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\Selector.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\CompositeNode\Selector.h">
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\Sequence.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\CompositeNode\Sequence.h">
+    <ClInclude Include="class\Componets\BehaviourTree\DecoratorNode\DecoratorNodeBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\DecoratorNode\DecoratorNodeBase.h">
+    <ClInclude Include="class\Componets\BehaviourTree\DecoratorNode\Inverter.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\DecoratorNode\Inverter.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\AlwaysFailLeaf.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\AlwaysFailLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\AlwaysSuccessLeaf.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\AlwaysSuccessLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\ChasePlayerLeaf.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\ChasePlayerLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\CircleAttackLeaf.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\CircleAttackLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\DebugDrawLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\LeafNodeBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\EscapeFromPlayerLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\LeafNode\WaitLeaf.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\LeafNodeBase.h">
+    <ClInclude Include="class\Componets\BehaviourTree\BehaviorTreeUtility.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\LeafNode\WaitLeaf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\BehaviourTreeBulider.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\Mathf.h">
+    <ClInclude Include="class\Componets\BehaviourTree\INode.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\MySystemTimer.h">
+    <ClInclude Include="class\Componets\BehaviourTree\NodeBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\MyTimer.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\Screen.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\Math\Singleton.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\BehaviorTreeUtility.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\BehaviourTreeBulider.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\INode.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\NodeBase.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="class\GameObjects\BehaviourTree\NodeResult.h">
+    <ClInclude Include="class\Componets\BehaviourTree\NodeResult.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\GameObjects\Player\Player.h">
@@ -321,6 +309,21 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\GameObjects\Camera\FollowCamera\FollowCamera.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\GameObjects\Enemy\State\AttackState.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\GameObjects\Enemy\State\StateBase.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\GameObjects\Enemy\State\EscapeState.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\GameObjects\Enemy\State\WaitState.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
