--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -190,9 +190,11 @@
     <ClCompile Include="class\GameObjects\World\World.cpp" />
     <ClCompile Include="class\GameObjects\Camera\FollowCamera\FollowCamera.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\EscapeState.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\Components\LockOn.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\WeaponSlot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h" />
@@ -253,6 +255,8 @@
     <ClInclude Include="class\GameObjects\Enemy\State\StateBase.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\EscapeState.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\WaitState.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\Components\LockOn.h" />
+    <ClInclude Include="class\GameObjects\Weapon\WeaponSlot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
