--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -160,8 +160,15 @@
     <ClCompile Include="class\GameObjects\Player\Actions\Action\None\NoneAction.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\MoveController.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\WeaponController.cpp" />
-    <ClCompile Include="class\GameObjects\Weapon\Gun\Components\Magazine.cpp" />
-    <ClCompile Include="class\GameObjects\Weapon\Gun\Gun.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Components\Magazine.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\IGun.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\Launcher\Launcher.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\MachineGun\MachineGun.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\Missile\Missle.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\Rifle\Rifle.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\ShotGun\ShotGun.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Melee\IMelee.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Melee\Melee.cpp" />
     <ClCompile Include="class\scene\TestScene.cpp" />
     <ClCompile Include="class\scene\Title.cpp" />
     <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp" />
@@ -190,11 +197,14 @@
     <ClCompile Include="class\GameObjects\World\World.cpp" />
     <ClCompile Include="class\GameObjects\Camera\FollowCamera\FollowCamera.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\EscapeState.cpp" />
-    <ClCompile Include="class\GameObjects\Weapon\Gun\Components\LockOn.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Components\LockOn.cpp" />
+    <ClCompile Include="class\GameObjects\Player\System\LeadingSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\WeaponSlot.cpp" />
+    <ClCompile Include="class\GameObjects\UI\Weapon\WeaponUI.cpp" />
+    <ClCompile Include="class\GameObjects\UI\UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h" />
@@ -204,7 +214,6 @@
     <ClInclude Include="class\GameObjects\Bullets\BulletBase.h" />
     <ClInclude Include="class\Componets\Math.h" />
     <ClInclude Include="class\Componets\Timer.h" />
-    <ClInclude Include="class\GameObjects\ICharacter.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\ActionConfig.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\Action\Evasion\Evasion.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\Action\IAction.h" />
@@ -213,9 +222,16 @@
     <ClInclude Include="class\GameObjects\Player\Actions\IActions.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\MoveController.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\WeaponController.h" />
-    <ClInclude Include="class\GameObjects\Weapon\Gun\Components\Magazine.h" />
-    <ClInclude Include="class\GameObjects\Weapon\Gun\Gun.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Components\Magazine.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\IGun.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\Launcher\Launcher.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\MachineGun\MachineGun.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\Missile\Missle.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\Rifle\Rifle.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\ShotGun\ShotGun.h" />
     <ClInclude Include="class\GameObjects\Weapon\IWeapon.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Melee\IMelee.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Melee\Melee.h" />
     <ClInclude Include="class\GameObjects\Weapon\WeaponConfig.h" />
     <ClInclude Include="class\scene\TestScene.h" />
     <ClInclude Include="class\scene\Title.h" />
@@ -255,8 +271,11 @@
     <ClInclude Include="class\GameObjects\Enemy\State\StateBase.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\EscapeState.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\WaitState.h" />
-    <ClInclude Include="class\GameObjects\Weapon\Gun\Components\LockOn.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Components\LockOn.h" />
     <ClInclude Include="class\GameObjects\Weapon\WeaponSlot.h" />
+    <ClInclude Include="class\GameObjects\UI\Weapon\WeaponUI.h" />
+    <ClInclude Include="class\GameObjects\UI\UIManager.h" />
+    <ClInclude Include="class\GameObjects\Player\System\LeadingSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
